fixed nav bar on mobile

--- a/content/css/style.css
+++ b/content/css/style.css
@@ -20,7 +20,8 @@ pre { border:solid 1px #c3c3c3;
       overflow-x:auto
     }
 
-nav { overflow-x:auto
+nav { overflow-x:auto;
+      white-space: nowrap
     }
 
 img { border-radius:8px 8px 8px 8px;
